--- a/.github/workflows/firrstAction.yaml
+++ b/.github/workflows/firrstAction.yaml
@@ -6,6 +6,8 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: checkout
+          uses: action/checkout@v4
         - name: Welcome message
           run: echo "My first github action job"
 
