--- a/.github/workflows/firrstAction.yaml
+++ b/.github/workflows/firrstAction.yaml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: checkout
-          uses: action/checkout@v4
+          uses: actions/checkout@v4
         - name: Welcome message
           run: echo "My first github action job"
 
