--- a/.github/workflows/generate  ascii.yaml
+++ b/.github/workflows/generate  ascii.yaml
@@ -21,5 +21,5 @@ jobs:
     - name: Test File Exists
       uses: grep -i "dragon" dragon.txt
       
-    - name: list Repo Files
+    - name: list Repo File
       uses: ls -ltra
