--- a/.github/workflows/generateascii.yaml
+++ b/.github/workflows/generateascii.yaml
@@ -11,15 +11,15 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Cowsay Program
-      uses: sudo apt-get install cowsay -y
+      run: sudo apt-get install cowsay -y
 
 
     - name: Execute Cowsay CMD 
-      uses: cowsay -f dragon "Run for cover, I am a DRAGON.....RAAR" >> dragon.txt
+      run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAAR" >> dragon.txt
 
 
     - name: Test File Exists
-      uses: grep -i "dragon" dragon.txt
+      run: grep -i "dragon" dragon.txt
       
     - name: list Repo File
-      uses: ls -ltra
+      run: ls -ltra
